// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calling CubeClient functions [Function getCampaignsPerformanceGraphData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "CampaignOrderEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignOrderEvents.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "CampaignOrderEvents.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "CampaignOrderEvents.campaignCTR",
        "CampaignOrderEvents.totalConversionRate",
      ],
      "order": [
        [
          "CampaignOrderEvents.createdDatetime",
          "asc",
        ],
      ],
      "timeDimensions": [
        {
          "dateRange": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
          "dimension": "CampaignOrderEvents.createdDatetime",
          "granularity": "day",
        },
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getRevenueUpliftGraphData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "OrderConversion.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "OrderConversion.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "OrderConversion.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "OrderConversion.influencedRevenueUplift",
      ],
      "order": [
        [
          "OrderConversion.createdDatetime",
          "asc",
        ],
      ],
      "timeDimensions": [
        {
          "dateRange": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
          "dimension": "OrderConversion.createdDatetime",
          "granularity": "day",
        },
      ],
    },
  ],
}
`;

exports[`Getting Cube queries [Function getCampaignEventsOrdersPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignOrderEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignOrderEvents.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.engagement",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getCampaignEventsPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignEvents.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "CampaignEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignEvents.impressions",
      "CampaignEvents.firstCampaignDisplay",
      "CampaignEvents.lastCampaignDisplay",
      "CampaignEvents.clicks",
      "CampaignEvents.clicksRate",
    ],
    "segments": [
      "CampaignEvents.campaignEventsOnly",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getCampaignEventsTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignOrderEvents.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "CampaignOrderEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.impressions",
      "CampaignOrderEvents.engagement",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getCampaignOrderPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "OrderConversion.campaignId",
    ],
    "filters": [
      {
        "member": "OrderConversion.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
      "OrderConversion.ticketSales",
      "OrderConversion.ticketSalesCount",
      "OrderConversion.discountSales",
      "OrderConversion.discountSalesCount",
      "OrderConversion.clickSales",
      "OrderConversion.clickSalesCount",
      "OrderConversion.campaignSalesCount",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getCampaignOrderTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.influencedRevenueUplift",
      "OrderConversion.campaignSales",
      "OrderConversion.campaignSalesCount",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getStoreRevenueTotalData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.gmv",
    ],
  },
]
`;

exports[`Getting Cube queries [Function getTrafficData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignEvents.createdDatetime",
        "operator": "inDateRange",
        "values": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
      },
      {
        "member": "CampaignEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignEvents.traffic",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T00:00:00-08:00",
          "2023-03-15T23:59:59-07:00",
        ],
        "dimension": "CampaignEvents.createdDatetime",
        "granularity": "day",
      },
    ],
  },
]
`;
